# project1_Trofimenko_Artem_m25-555

./: .gitignore  Makefile  README.md  pyproject.toml
labyrinth_game/: .main.py.swp  constants.py  main.py  player_actions.py  utils.py
